--- a/styles.css
+++ b/styles.css
@@ -11,18 +11,10 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  /*width: 400px;
-  height: 400px;
-  border-radius: 300px;
-  border: 10px solid red;
-  overflow: hidden;*/
 }
 .layer svg {
-  /*width: 400px;
-  height: 400px;*/
   width: 100%;
   height: 100%;
-  float: left;
 }
 
 .controls {
@@ -30,11 +22,17 @@ body {
   background: rgba(255,255,255,.9);
   z-index: 1;
   padding: 25px;
+  height: 100%;
+  overflow: scroll;
+  box-sizing: border-box;
 }
 .controls .type {
   line-height: 1.1;
   margin: 0 0 0 20px;
   color: #808080;
+}
+.controls .toggle {
+  float: right;
 }
 .layer-toggle {
   list-style-type: none;
